Revision history for {{$dist->name}}

{{$NEXT}}

0.131020  2013-04-12 13:51:55 America/Chicago

  * Update "resources" metadata for distribution to GitHub URIs

0.131000  2013-04-09 22:44:08 America/Chicago

  * Initial release

vim: syntax=:softtabstop=2:shiftwidth=2