@@ -29,7 +29,6 @@ HTTP::Daemon::SSL = 0
 HTTP::Request::Params = 0
 Class::Monkey = 0
 Test::XML = 0
-Test::Warn = 0
 Test::Fatal = 0
 File::Temp = 0
 Test::Deep = 0
