@@ -2,6 +2,9 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+  * Remove minor warning test that was failing (resolves GitHub issue
+    #1)
+
 0.131020  2013-04-12 13:51:55 America/Chicago
 
   * Update "resources" metadata for distribution to GitHub URIs
